k8s/demo/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
  labels:
    name: pod-demo
spec:
  containers:
  - name: pod-demo
    image: <Image>
    resources:
      limits:
        memory: "128Mi"
        # cpu: "500m"
        cpu: 500
    ports:
      - containerPort: 80
