k8s/demo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - fitzix.io
      secretName: tls-ingress
  rules:
    - host: fitzix.iok8s
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: dashboard-google
#   namespace: kube-system
#   annotations:
#     nginx.ingress.kubernetes.io/secure-backends: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
# spec:
#   tls:
#     - hosts:
#       - admin.fitzix.io
#       secretName: tls-ingress
#   rules:
#     - host: admin.fitzix.io
#       http:
#         paths:
#         - path: /
#           backend:
#             serviceName: kubernetes-dashboard
#             servicePort: 443
